# sutd_skeleton

./: .gitignore  CLAUDE.md  chatbot1.py  db_setup.py  ehs_frontend.py  pyproject.toml
.claude/: settings.json
SUTD/design_handoff_ehs_portal_editorial/: README.md  prototype.html
SUTD/design_handoff_ehs_portal_editorial/reference-source/: app.jsx  chat-page.jsx  inspection-editorial.jsx  inspection-state.jsx  prediction-card.jsx  primitives.jsx  quiz-overlay.jsx  tokens.jsx
SUTD_SUMANTH/recommendation/: .env.example  requirements.txt
SUTD_SUMANTH/recommendation/app/: config.py  dependencies.py  main.py
SUTD_SUMANTH/recommendation/scripts/: train_distilbert.py
alembic/versions/: 0002_remove_redis_add_pg_state.py
app/api/: health.py
app/api/v1/: quiz.py  router.py  sessions.py  submissions.py
app/core/: logging.py  security.py
app/ml/distilbert/: model.py  tokenizer.py
app/schemas/: quiz.py
app/services/quiz/: evaluator.py  generator.py
app/services/rag/: chain.py
app/services/rag/ingestion/: chunker.py  (+2 more)
app/services/recommendation/: chain.py
docs/plans/: 2026-04-23-ui-ux-design.md
ehs_backend/: .env.example  CREDENTIALS.md  README.md  alembic.ini  api_spec.json  pyproject.toml  requirements.txt  setup_vm.sh
ehs_backend/alembic/: env.py
ehs_backend/alembic/versions/: 0001_initial_schema.py  0003_activity_recommendations.py  0004_risk_assessments.py  0005_add_ra_json_to_recommendations.py  0006_token_quota_tables.py
ehs_backend/app/: config.py  dependencies.py  main.py
ehs_backend/app/api/: health.py
ehs_backend/app/api/v1/: admin.py  auth.py  chat.py  chatbot.py  hazard.py  inspect.py  quiz.py  ra.py  router.py  sessions.py  submissions.py
ehs_backend/app/core/: auth_middleware.py  exceptions.py  quota_depends.py  rate_limit.py  security_headers.py
ehs_backend/app/db/: session.py
ehs_backend/app/ml/distilbert/: predictor.py
ehs_backend/app/ml/training/: dataset.py  trainer.py
ehs_backend/app/schemas/: auth.py  chat.py  chatbot.py  hazard.py  inspect.py  quiz.py  recommendation.py  submission.py
ehs_backend/app/services/chat/: client.py  prompt.py
ehs_backend/app/services/hazard/: analyser.py
ehs_backend/app/services/quiz/: evaluator.py  generator.py
ehs_backend/app/services/quota/: service.py
ehs_backend/app/services/ra/: docx_writer.py  extractor.py  generator.py  hybrid_lookup.py  json_docx_writer.py
ehs_backend/app/services/rag/: chain.py
ehs_backend/app/services/rag/query/: hyde.py  intent_classifier.py
ehs_backend/app/services/rag/retrieval/: bm25_retriever.py  reranker.py  vector_retriever.py
ehs_backend/app/services/recommendation/: doc_generator.py  engine.py  hybrid_lookup.py  label_registry.py  llm_generator.py  ra_generator.py  session_state.py
ehs_backend/data/: sample.csv
ehs_backend/scripts/: ingest_historical_data.py  load_mock_data.py  mock_ra_data.json  test_model.py
ehs_backend/tests/: conftest.py
ehs_backend/tests/unit/: test_chain_orchestration.py  test_rrf_fusion.py
ehs_frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
ehs_frontend/src/: App.tsx
ehs_frontend/src/api/: chat.ts  client.ts  hazard.ts  inspect.ts  quiz.ts  ra.ts
ehs_frontend/src/hooks/: useChat.ts  useInspection.ts  useQuiz.ts
ehs_frontend/src/pages/: ChatPage.tsx  DocumentRAPage.tsx  HazardPage.tsx  InspectionPage.tsx  QuizPage.tsx  RAPage.tsx
ehs_frontend/src/styles/: globals.css
scripts/: seed_db.py  train_distilbert.py
tests/integration/: test_chatbot_api.py  test_recommendation_api.py
tests/unit/: test_semantic_chunker.py
(+18 files in other folders)
